syntax = "proto3";
package userservice;

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    repeated string post_IDs = 4;
  }
  
  service UserService {
    rpc GetUser (GetUserRequest) returns (User);
    rpc CreateUser (CreateUserRequest) returns (User);
    rpc GetUsers(User) returns (GetUsersResponse);
  }
  
  message GetUserRequest {
    string user_id = 1;
  }
  
  message CreateUserRequest {
    string username = 1;
    string password = 2;
  }

  message GetUsersResponse{
    repeated User users = 1;
  }